# MLTrail

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: db_tests.yml  pytest.yml
data/csv/transgrancanaria/: transgrancanaria_classic_2023.csv
examples/: CSV_to_DB.py  CSV_to_DB_results.py  CSV_to_DB_timing_points.py  Transgrancanaria 2023 - Analysis.ipynb  dev_features_db.ipynb  new_way_db.ipynb  parse_LiveTrail_to_DB.ipynb  parse_LiveTrail_to_DB.py  scraper.ipynb  tmp_load_db_tests_n_code.ipynb
front/: .env.example  MLTrail.py  app.py  auth.py
front/pages/: 1_race_results.py  2_my_results.py
front/templates/: analysis_template.html  index.html
scripts/: resume_backfill.py
src/ai/: features.py  ml_model.py  training_service.py  xgboost.py
src/config/: __init__.py  config.py  logging_config.py
src/database/: create_db.py  database.py  load_features.py  models.py
src/database/loader_LiveTrail/: CSV_to_DB_results.py  CSV_to_DB_timing_points.py  backfill_categories.py  db_LiveTrail_loader.py
src/results/: results.py
src/scraper/: scraper.py
tests/: test_ai_xgboost.py  test_backfill_categories.py  test_database_create.py  test_database_events.py  test_database_races.py  test_database_results.py  test_db_LiveTrail_loader.py  test_results.py  test_scraper.py  test_training_service.py  tools.py
tests/database/: test_database_create.py
tests/test_database/: test_database_create.py  test_database_events.py  test_database_races.py  test_database_results.py  test_load_features.py
