[tool.poetry]
name = "MLTrail"
version = "0.1.0"
description = ""
authors = ["Victor Nacher"]
readme = "README.md"
packages = [
    {include = "results", from="src"},
    {include = "scraper", from="src"},
    {include = "database", from="src"},
    {include = "tests", from="tests"},
    {include = "src"}
    ]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.2"
numpy = "^1.26.4"
pandas = "^2.2.0"
lxml = "^5.1.0"
html5lib = "^1.1"
beautifulsoup4 = "^4.12.3"
pytest = "^8.0.0"
python-dotenv = "^1.0.1"
streamlit = "^1.33.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"